<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <TextView style="@style/Title.SubTitle" android:text="@string/playlocalgame"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="@dimen/ui_element_width"
            android:layout_height="wrap_content">
            <TextView style="@style/MenuText"
                android:text="@string/defender" />
            <EditText style="@style/MenuText.Edit"
                android:id="@+id/localPlayer1Name"
                android:text="@string/player1" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/ui_element_width"
            android:layout_height="wrap_content">
            <TextView style="@style/MenuText"
                android:text="@string/attacker"/>
            <EditText style="@style/MenuText.Edit"
                android:id="@+id/localPlayer2Name"
                android:text="@string/player2" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button style="@style/MenuButton"
            android:text="@string/start_game"
            android:id="@+id/startLocalButton"/>

    </FrameLayout>



</LinearLayout>