<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView style="@style/Title" android:text="@string/tablut"/>

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout style="@style/MenuLinear" android:id="@+id/mainMenu">
            <Button style="@style/MenuButton"
                android:id="@+id/playLocalButton"
                android:text="@string/playlocalgame" />
            <Button style="@style/MenuButton"
                android:id="@+id/playNetworkButton"
                android:text="@string/play_on_network" />
            <Button style="@style/MenuButton"
                android:id="@+id/scoresButton"
                android:text="@string/scores" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>